load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/megakuul/kerberos-sim/client",
    visibility = ["//visibility:private"],
    deps = [
        "//message",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_crypto//ssh/terminal",
    ],
)
