load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

filegroup(
    name = "database-file",
    srcs = ["database.yaml"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "key-distribution-center_lib",
    srcs = ["main.go"],
    importpath = "github.com/megakuul/kerberos-sim/key-distribution-center",
    visibility = ["//visibility:private"],
    deps = [
        "//key-distribution-center/dataloader",
        "//key-distribution-center/listener",
    ],
)

go_binary(
    name = "key-distribution-center",
    data = [":database-file"],
    embed = [":key-distribution-center_lib"],
    visibility = ["//visibility:public"],
)
