load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "handler",
    srcs = ["handler.go"],
    importpath = "github.com/megakuul/kerberos-sim/service/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//service/dataloader",
        "//shared/message",
        "@org_golang_google_protobuf//proto",
    ],
)
