load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "crypto",
    srcs = ["crypto.go"],
    embed = [":crypto_go_proto"],
    importpath = "github.com/megakuul/kerberos-sim/shared/crypto",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_protobuf//proto"],
)

proto_library(
    name = "crypto_proto",
    srcs = ["crypto.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "crypto_go_proto",
    importpath = "github.com/megakuul/kerberos-sim/shared/crypto",
    proto = ":crypto_proto",
    visibility = ["//visibility:public"],
)
